--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,36 +1,35 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
-  name: ekart-deployment
+  name: shopping-cart
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: ekart
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: shopping-cart
   template:
     metadata:
       labels:
-        app: ekart
+        app: shopping-cart
     spec:
       containers:
-        - name: ekart
-          image: adijaiswal/ekart:latest # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 8070 # The port that the container is running on in the cluster
+      - name: shopping-cart
+        image: arunscalezee/shopping-cart:latest
+        ports:
+        - containerPort: 8070
 
 
 ---
 
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: ekart-ssvc
+apiVersion: v1
+kind: Service
+metadata:
+  name: shopping-cart-service
 spec:
   selector:
-    app: ekart
+    app: shopping-cart
   ports:
-    - protocol: "TCP"
-      port: 8070 # The port that the service is running on in the cluster
-      targetPort: 8070 # The port exposed by the service
-  type: LoadBalancer # type of the service.
+    - protocol: TCP
+      port: 80
+      targetPort: 8070
+  type: NodePort
