--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -15,6 +15,7 @@ spec:
       containers:
       - name: shopping-cart
         image: arunscalezee/shopping-cart:tag-v1.1
+        imagePullPolicy: Always
         ports:
         - containerPort: 8070
 
